# test_MKK_Luna

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TASK.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  db.py  geo.py  main.py  models.py  repositories.py  schemas.py  services.py
app/api/: middleware.py
app/api/v1/: api.py  geo.py  main.py
app/core/: config.py  db.py  logging.py  metrics.py  request_context.py
app/migrations/: env.py
app/models/: models.py
app/repo/: repositories.py
app/schemas/: schemas.py
app/services/: services.py
observability/alloy/: config.alloy
observability/grafana/dashboards/: orgs-api-observability.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
scripts/: seed_data.py
tests/: conftest.py  test_activities.py  test_auth.py  test_geo.py  test_health.py  test_metrics.py  test_organizations.py  test_orgs_service.py  test_search.py
