[tool.poetry]
name = "orgs-api"
version = "0.1.0"
description = ""
authors = ["kafar"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.110"
uvicorn = {version = ">=0.29", extras = ["standard"]}
sqlalchemy = ">=2.0"
psycopg = { version = ">=3.1", extras = ["binary"] }
pydantic = ">=2.6"
pydantic-settings = ">=2.2"
alembic = "^1.18.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
httpx = ">=0.27"
ruff = ">=0.6"
mypy = ">=1.10"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["B008", "RUF002"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
